--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -1,14 +1,36 @@
+# View examples and documentation at https://deliverybot.dev/docs/
+production:
+  environment: production
+  #required_contexts: ["ci"] # Can be used to avoid a deployment to production if CI/PR build has failed.
+  production_environment: true
+
+# We'll deploy to staging environment whenever a commit comes into master.
+# staging:
+#   auto_deploy_on: refs/heads/master
+#   environment: staging
+#   production_environment: false
+
+btc:
+  environment: production
+  description: Deploy Indexer to btc.indexer.blockcore.net
+  payload:
+    chain: "BTC"
+
 city:
   environment: production
-  production_environment: true
+  description: Deploy Indexer to city.indexer.blockcore.net
+  payload:
+    chain: "CITY"
+
 
 xds:
   environment: production
-  production_environment: true
+  description: Deploy Indexer to xds.indexer.blockcore.net
+  payload:
+    chain: "XDS"
 
-
-# We'll deploy to staging environment whenever a commit comes into master.
-staging:
-  auto_deploy_on: refs/heads/master
-  environment: staging
-  production_environment: false
+canary:
+  environment: production
+  description: Deploy to production with %15 traffic.
+  payload:
+    traffic: 15
