--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -1,32 +1,13 @@
-# View examples and documentation at https://deliverybot.dev/docs/
-# production:
-#   environment: production
-#   #required_contexts: ["ci"] # Can be used to avoid a deployment to production if CI/PR build has failed.
-#   production_environment: true
-
-# We'll deploy to staging environment whenever a commit comes into master.
-# staging:
-#   auto_deploy_on: refs/heads/master
-#   environment: staging
-#   production_environment: false
-
-btc:
-  environment: btc
-  description: Deploy Indexer to btc.indexer.blockcore.net
+indexer:
+  environment: indexer
+  description: Deploy Blockcore Indexer
   payload:
     chain: "BTC"
     version: "v0.0.2"
 
-city:
-  environment: city
-  description: Deploy Indexer to city.indexer.blockcore.net
+explorer:
+  environment: explorer
+  description: Deploy Blockcore Explorer
   payload:
-    chain: "CITY"
-    version: "v0.0.2"
-
-xds:
-  environment: xds
-  description: Deploy Indexer to xds.indexer.blockcore.net
-  payload:
-    chain: "XDS"
+    chain: "BTC"
     version: "v0.0.2"
